--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: mtxo_lab
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -34,6 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  lottie: ^3.2.0
+  get_it: ^8.0.3
+  shared_preferences: ^2.5.3
+  dio: ^5.8.0+1
+  internet_connection_checker: ^3.0.1
+  network_info_plus: ^6.1.4
+  package_info_plus: ^8.3.0
+  permission_handler: ^12.0.0+1
+  provider: ^6.1.5
+  intl: ^0.20.2
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +62,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
